--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,7 +347,7 @@
     border-radius: 12px;
     background:
         linear-gradient(179.77deg, rgba(3, 1, 6, 0) 29.33%, #361764 89.04%),
-        url(assets/images/analytics.png);
+        url(../assets/images/analytics.png);
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
